tests/fixtures/invalid/double-quotes.php
<?php

declare(strict_types=1);

echo "double quotes";
